<resources>
    <string name="app_name">Accesos Directos</string>

    <string name="label_order">Orden</string>
    <string name="product_img_label">Imagen del Producto</string>
    <string name="label_products">Productos</string>
    <string name="label_orders">Órdenes</string>
    <string name="label_account">Cuenta</string>

    <string name="disabled_label_shortcut">Hay un problema</string>
    <string name="account_short_label_shortcut">Mi cuenta</string>
    <string name="account_long_label_shortcut">Entrar a mi cuenta</string>

    <string name="jewelery_short_label_shortcut">Productos de Joyería</string>
    <string name="electronic_short_label_shortcut">Productos electrónicos</string>
    <string name="status_order">Estado de pedidos</string>
    <string name="title_activity_home_compose">HomeComposeActivity</string>

    <string name="products">Productos</string>
    <string name="order">Orden</string>
    <string name="account">Cuenta</string>
</resources>